--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.google.mlkit:smart-reply:16.1.0'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
